# sunvox-dll-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: pre-commit.yml  publish-to-test-pypi.yml  publish.yml  python-tests.yml
docs/: conf.py  index.rst  make.bat  updating.rst
sunvox/: __init__.py  api.py  dll.py  macros.py  process.py  processor.py  slot.py  types.py
sunvox/buffered/: __init__.py  process.py  processor.py  shm.py
sunvox/lib/: copy-libs.sh
sunvox/tools/: export.py
tests/: test_init_deinit.py
