[tool.poetry]
name = "sunvox-dll-python"
version = "0.3.2.2.0.0.0"
description = "Python ctypes-based wrapper for the SunVox library"
authors = ["Matthew Scott <matt@11craft.com>"]
license = "MIT"
readme = "README.rst"
documentation = "https://sunvox-dll-python.readthedocs.io/en/latest/"
repository = "https://github.com/metrasynth/sunvox-dll-python"
packages = [
    { include = "sunvox" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = {version = "^1.21.0", optional = true}
scipy = {version = "^1.8.0", optional = true}
tqdm = {version = "^4.61.1", optional = true}
plantweb = {version = "^1.2.1", optional = true}
Sphinx = {version = "^4.0.2", optional = true}
sphinx-rtd-theme = {version = "^0.5.2", optional = true}
radiant-voices = {version = "^1.0.3", optional = true}

[tool.poetry.dev-dependencies]
py = "^1.10.0"
pytest = "^6.2.4"
pytest-watch = "^4.2.0"

[tool.poetry.extras]
buffered = ["numpy"]
docs = ["plantweb", "Sphinx", "sphinx-rtd-theme", "radiant-voices"]
tools = ["numpy", "scipy", "tqdm"]

[tool.pytest.ini_options]
addopts = "--doctest-glob='*.rst' --doctest-modules"
testpaths = "sunvox tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
