[tool.poetry]
name = "sunvox-dll-python"
version = "0.3.5.2.1.0.3"
description = "Python ctypes-based wrapper for the SunVox library"
authors = ["Matthew Scott <matt@11craft.com>"]
license = "MIT"
readme = "README.rst"
documentation = "https://sunvox-dll-python.readthedocs.io/en/latest/"
repository = "https://github.com/metrasynth/sunvox-dll-python"
packages = [
    { include = "sunvox" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = {version = "*", optional = true}
scipy = {version = "*", optional = true}
tqdm = {version = "*", optional = true}

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-watch = "*"

[tool.poetry.group.docs.dependencies]
plantweb = {version = "*", optional = true}
radiant-voices = {version = "*", optional = true}
Sphinx = {version = "*", optional = true}
sphinx-rtd-theme = {version = "*", optional = true}

[tool.poetry.extras]
buffered = ["numpy"]
tools = ["numpy", "scipy", "tqdm"]

[tool.pytest.ini_options]
addopts = "--doctest-glob='*.rst' --doctest-modules"
testpaths = "sunvox tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
