[project]
name = "sunvox-dll-python"
version = "0.3.6.2.1.2.1"
description = "Python ctypes-based wrapper for the SunVox library"
readme = "README.rst"
authors = [
    { name = "Matthew Scott", email = "matt@11craft.com" }
]
requires-python = ">=3.9"
dependencies = []
documentation = "https://sunvox-dll-python.readthedocs.io/en/latest/"
repository = "https://github.com/metrasynth/sunvox-dll-python"

[project.optional-dependencies]
buffered = [
    "numpy>=2.0.2",
]
tools = [
    "numpy>=2.0.2",
    "scipy>=1.13.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sunvox"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-watch>=4.2.0",
]
docs = [
    "plantweb>=1.3.0",
    "radiant-voices>=1.0.3",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.pytest.ini_options]
addopts = "--doctest-glob='*.rst' --doctest-modules"
testpaths = "sunvox tests"

[tool.ruff]
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    ".idea",
    "build",
    "dist",
]

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2
